Passwort Feld überarbeitet

--- a/Projekt/Templates/index.html
+++ b/Projekt/Templates/index.html
@@ -14,6 +14,11 @@
         * {
             height: 30px;
         }
+
+        .i {
+            margin-right: -30px; 
+            cursor: pointer;
+        }
     </style>
 
 </head>
@@ -66,7 +71,7 @@
         <div class="row mt-3">
             <div class="col-md-1"> Passwort: 
             </div>
-            <div class="col-md-4"> <input type="text" class="size" id="passwort" name="passwort" placeholder="********">
+            <div class="col-md-4"> <input type="password" class="size" id="passwort" name="passwort" placeholder="********">
             </div>
         </div>
     </div>
