--- a/Projekt/Templates/Formular/index.html
+++ b/Projekt/Templates/Formular/index.html
@@ -7,12 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Formular</title>
     <style>
+        body{
+            background-color: black;
+            
+        }
+        
+        h1{
+            font-size: 50px;
+        }
         .size {
             width: 100%;
         }
 
         * {
             height: 30px;
+            color: gray;
         }
 
         .i {
@@ -23,6 +32,7 @@
 
 </head>
 <body>
+    <h1>Formular</h1>
 <form action="l">
 
     <div class="container">
