--- a/Projekt/Templates/Formular/formular.html
+++ b/Projekt/Templates/Formular/formular.html
@@ -5,34 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styleFormular.css">
     <title>Formular</title>
-    <style>
-        body {
-            background-color: black;
-
-        }
-
-        h1 {
-            font-size: 50px;
-        }
-
-        .size {
-            width: 100%;
-        }
-
-        * {
-            height: 30px;
-            color: gray;
-        }
-
-        .i {
-            margin-right: -30px;
-            cursor: pointer;
-        }
-    </style>
-
 </head>
 
 <body>
