--- a/Projekt/Templates/Formular/index.html
+++ b/Projekt/Templates/Formular/index.html
@@ -5,62 +5,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="styleIndex.css">
   <title>HomeOfBugatti</title>
 </head>
 
 <body>
-  <style>
-    h1 {
-      text-align: center;
-      font-size: 150px;
-    }
-
-    .chiron {
-      position: absolute;
-      height: 300px;
-      width: 500px;
-      margin-top: 50px;
-    }
-
-    .chirontext {
-      font-size: 0.9cm;
-      color: aliceblue;
-      background-color: black;
-      opacity: 0.5;
-      width: 500px;
-      height: 50px;
-      margin-top: 300px;
-    }
-  </style>
-  <ul>
-    <a href="index.html">Home</a>
-    <form class="search">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-      <a class="registrieren-link" href="Formular.html">Registrieren</a>
-    </form>
-  </ul>
-  <hr {width: 25px;} />
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <img class="Logo" src="bugattiLogo.png">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">About us</a>
+          </li>
+        </ul>
+        <li class="d-flex">
+          <a class="nav-link active" aria-current="page" href="formular.html">Registrieren</a>
+        </li>
+      </div>
+    </div>
+  </nav>
 
   <div class="container">
-    <div class="col-sm-4">
+    <div class="col-md-">
       <h1>Home of Bugatti</h1>
     </div>
   </div>
 
-  <div class="container">
-    <figure>
-      <a class="col-md-4" href="chiron.html"><img class="chiron" src="https://media.gq-magazin.de/photos/63a42f906368b79046b9a2b2/16:9/w_2991,h_1682,c_limit/04%20BUGATTI_CHIRON-Profilee.jpg"></a>
+  <div class="row">
+    <div class="row-eq-height">
+        <a class="float-left" href="chiron.html"><img class="chiron" src="ChironBild.webp"></a>
+    </div>
+    <div class="row-eq-height">
       <div class="chirontext">Bugatti Chiron</div>
-    </figure>
+    </div>
+  </div>
   </div>
 
-  <div class="container">
-    <figure>
-      <a href="voiture.html"><img class="voiture" src="https://www.tuningblog.eu/wp-content/uploads/2021/06/Bugatti-La-Voiture-Noire-Tuning-22.jpg"></a>
-    </figure>
+  <div class="row">
+    <div class="row-eq-height">
+        <a class="float-right" href="LaVoitureNoire.html"><img class="voiture" src="LaVoitureNoireBild.jpg"></a>
+    </div>
+    <div class="row-eq-height">
+      <div class="voituretext">Bugatti La Voiture Noire</div>
+    </div>
   </div>
 </body>
 
