--- a/Projekt/Templates/Formular/index.html
+++ b/Projekt/Templates/Formular/index.html
@@ -14,14 +14,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <img class="Logo" src="bugattiLogo.png">
+      <a href="index.html"><img class="Logo" src="bugattiLogo.png"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">About us</a>
+            <a class="nav-link active" href="auboutus.html" tabindex="-1" aria-disabled="true">About us</a>
           </li>
         </ul>
         <li class="d-flex">
@@ -31,30 +31,22 @@
     </div>
   </nav>
 
-  <div class="container">
-    <div class="col-md-">
       <h1>Home of Bugatti</h1>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="row-eq-height">
-        <a class="float-left" href="chiron.html"><img class="chiron" src="ChironBild.webp"></a>
-    </div>
-    <div class="row-eq-height">
-      <div class="chirontext">Bugatti Chiron</div>
-    </div>
-  </div>
-  </div>
 
-  <div class="row">
-    <div class="row-eq-height">
-        <a class="float-right" href="LaVoitureNoire.html"><img class="voiture" src="LaVoitureNoireBild.jpg"></a>
-    </div>
-    <div class="row-eq-height">
-      <div class="voituretext">Bugatti La Voiture Noire</div>
-    </div>
-  </div>
+  <a class="float-left" href="chiron.html"><img class="chiron" src="ChironBild.webp"></a>
+
+  <div class="chirontext">Bugatti Chiron</div>
+
+
+
+
+  <a class="float-right" href="LaVoitureNoire.html"><img class="voiture" src="LaVoitureNoireBild.jpg"></a>
+
+
+  <div class="voituretext">Bugatti La Voiture Noire</div>
+
+
 </body>
 
 </html>
