--- a/Projekt/Templates/Formular/passwortZurück.html
+++ b/Projekt/Templates/Formular/passwortZurück.html
@@ -14,7 +14,7 @@
         <div class="text">
             <fieldset>
 
-                <p>Your data was successfully saved</p>
+                <p>Your password has been reset successfully</p>
 
             </fieldset>
         </div>
