--- a/Projekt/Templates/Formular/LaVoitureNoire.html
+++ b/Projekt/Templates/Formular/LaVoitureNoire.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styleVoiture.css">
     <title>La Voiture Noire</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <img class="Logo" src="bugattiLogo.png">
+            <a href="index.html"><img class="Logo" src="bugattiLogo.png"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">About us</a>
+                        <a class="nav-link active" href="auboutus.html" tabindex="-1" aria-disabled="true">About us</a>
                     </li>
                 </ul>
                 <li class="d-flex">
@@ -31,5 +33,12 @@
 
     <h1>Bugatti La Voiture Noire</h1>
     <img class="voiture" src="LaVoitureNoireBild.jpg">
+
+    <div class="textVoiture">
+        <p>La Voiture Noire ist ein Einzelstück des zum Volkswagen-Konzern gehörenden Herstellers Bugatti Automobiles,
+            das im März 2019 auf dem Genfer Auto-Salon als Konzeptfahrzeug vorgestellt wurde. Die Modellbezeichnung
+            bezieht sich auf einen verschollenen Vorkriegsklassiker von Bugatti.</p>
+    </div>
 </body>
+
 </html>
