--- a/Projekt/Templates/Formular/chiron.html
+++ b/Projekt/Templates/Formular/chiron.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styleChiron.css">
     <title>Bugatti Chiron</title>
 </head>
@@ -14,14 +14,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <img class="Logo" src="bugattiLogo.png">
+            <a href="index.html"><img class="Logo" src="bugattiLogo.png"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">About us</a>
+                        <a class="nav-link active" href="auboutus.html" tabindex="-1" aria-disabled="true">About us</a>
                     </li>
                 </ul>
                 <li class="d-flex">
@@ -33,6 +33,18 @@
 
     <h1>Bugatti Chiron</h1>
     <img class="chiron" src="ChironBild.webp">
+
+
+
+    <div class="textChiron">
+        <p>Der Bugatti Chiron ist ein deutsch-französischer Supersportwagen des französischen
+            Automobilherstellers Bugatti Automobiles SAS, der in Wolfsburg von der Bugatti Engineering GmbH
+            entwickelt wurde und auf einen technischen Entwurf von Bugatti Chef-Ingenieur Frank Götzke
+            zurückgeht.</p>
+    </div>
+
+
+
 </body>
 
 </html>
