--- a/Projekt/Templates/Formular/styleChiron.css
+++ b/Projekt/Templates/Formular/styleChiron.css
@@ -1,16 +1,27 @@
-.Logo{
-    height: 75px;
-    width:  150px;
+.Logo {
+  height: 75px;
+  width: 150px;
 }
 
 h1 {
-    text-align: center;
-    font-size: 125px;
-  }
+  text-align: center;
+  font-size: 125px;
+}
 
-.chiron{
-    width: 650px;
-    height: 400px;
-    display: block; 
- margin: auto;
+.chiron {
+  width: 650px;
+  height: 400px;
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+}
+
+.textChiron {
+  width: 400px;
+  border: 5px solid black;
+  padding: 50px;
+  margin-top: 100px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
