--- a/Projekt/Templates/Formular/styleFormular.css
+++ b/Projekt/Templates/Formular/styleFormular.css
@@ -1,8 +1,3 @@
-body {
-    background-color: black;
-
-}
-
 h1 {
     font-size: 50px;
 }
@@ -13,10 +8,17 @@ h1 {
 
 * {
     height: 30px;
-    color: gray;
 }
 
 .i {
     margin-right: -30px;
     cursor: pointer;
+}
+
+.country{
+    width: 100%;
+}
+
+.haveAccount{
+   color: black; 
 }
