--- a/Projekt/Templates/Formular/styleVoiture.css
+++ b/Projekt/Templates/Formular/styleVoiture.css
@@ -1,16 +1,27 @@
-.Logo{
+.Logo {
     height: 75px;
-    width:  150px;
+    width: 150px;
 }
 
 h1 {
     text-align: center;
-    font-size: 125px;
-  }
+    font-size: 100px;
+}
 
-.voiture{
+.voiture {
     width: 600px;
     height: 400px;
-    display: block; 
+    display: block;
     margin: auto;
+    margin-top: 50px;
+}
+
+.textVoiture {
+    width: 400px;
+    border: 5px solid black;
+    padding: 50px;
+    margin-top: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
